# rest-framework

./: .copier-answers.yml  .eslintrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .travis.yml  CONTRIBUTING.md  README.md  README.rst  __init__.py  __manifest__.py  core.py  http.py  oca_dependencies.txt  requirements.txt  rest_model_mixin.py  restutils.py  settings.py  test-requirements.txt
auth_partner/: README.rst  __manifest__.py
base_request_rest/: __init__.py  __manifest__.py  http.py  utils.py
base_rest/: README.rst  __init__.py  __manifest__.py  core.py  http.py  restapi.py  tools.py
base_rest_abstract_attachment/: __init__.py  __manifest__.py
base_rest_attachment/: __manifest__.py
base_rest_auth_api_key/: README.rst  __init__.py  __manifest__.py
base_rest_auth_jwt/: README.rst  __manifest__.py
base_rest_auth_user_service/: README.rst  __init__.py  __manifest__.py
base_rest_datamodel/: README.rst  __init__.py  __manifest__.py  restapi.py
base_rest_demo/: README.rst  __init__.py  __manifest__.py  partner.json  partner_image_api.json  ping_api.json
base_rest_pydantic/: README.rst  __init__.py  __manifest__.py  restapi.py
components/: service.py
controllers/: main.py
datamodel/: README.rst  __init__.py  __manifest__.py  builder.py  core.py  fields.py
extendable/: README.rst  __manifest__.py  registry.py
extendable_fastapi/: README.rst  __init__.py  __manifest__.py  fastapi_dispatcher.py  schemas.py
fastapi/: README.rst  __init__.py  http.py  (+10 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+527 files in other folders)
